Bug 168472 - Chart round-trip MSO -> LO -> MSO broken
Summary: Chart round-trip MSO -> LO -> MSO broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: kurt.nordback@protonmail.com
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2025-09-18 22:12 UTC by kurt.nordback@protonmail.com
Modified: 2025-10-09 14:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-70001.xlsx (24.54 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-09-19 00:02 UTC, Aron Budea
Details
forum-mso-de-71372.xlsx (114.40 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-09-19 00:03 UTC, Aron Budea
Details
forum-mso-de-132494.xlsx (179.70 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-09-19 00:03 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kurt.nordback@protonmail.com 2025-09-18 22:12:38 UTC
Description:
Commit f3e728aead1efc65d8b51b67bf9c14b1616d468c broke round-tripping of some files with charts. (MS Office will still load the resulting file, but it requests to "repair" it.)

Steps to Reproduce:
1. In LibreOffice, open one of the attached .xlsx files (which were created in MS Office).
2. Save to .xlsx format.
3. Open the re-saved file in MS Office.

Actual Results:
MSO displays a pop-up asking to repair the file.

Expected Results:
MSO opens the file without needing to "repair" it.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c850dd1c3636f1ad8dd5ac3d3b238c9b49acf23d
CPU threads: 64; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Aron Budea 2025-09-19 00:01:03 UTC
Affected files:
forum-mso-de-70001.xlsx
forum-mso-de-71371.xlsx
forum-mso-de-71372.xlsx
forum-mso-de-127172.xlsx
forum-mso-de-129432.xlsx
forum-mso-de-132494.xlsx
forum-mso-de-134644.xlsx
forum-mso-de-137108.xlsx
Comment 2 Aron Budea 2025-09-19 00:02:46 UTC
Created attachment 202875 [details]
forum-mso-de-70001.xlsx
Comment 3 Aron Budea 2025-09-19 00:03:20 UTC
Created attachment 202876 [details]
forum-mso-de-71372.xlsx
Comment 4 Aron Budea 2025-09-19 00:03:57 UTC
Created attachment 202877 [details]
forum-mso-de-132494.xlsx
Comment 5 Aron Budea 2025-09-19 00:05:05 UTC
Starting commit:
https://git.libreoffice.org/core/commit/f3e728aead1efc65d8b51b67bf9c14b1616d468c
author		Kurt Nordback <kurt.nordback@collabora.com>	Thu Sep 04 06:46:27 2025 -0600
committer	Tomaž Vajngerl <quikee@gmail.com>	Tue Sep 16 09:20:37 2025 +0200

tdf#167941 - Chart style file is not supported in OOXML
Comment 6 Commit Notification 2025-09-22 04:05:22 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5effa8d0977ac9ce13a8e66cbd2302e585c41c6d

tdf#168472 - Chart round-trip MSO -> LO -> MSO broken

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-09-24 12:58:29 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6556116e3da11ca9651d1c16154765a9acd91df7

tdf#168472 - Chart round-trip MSO -> LO -> MSO broken

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2025-10-05 17:59:46 UTC
Kurt: feel free to close as fixed, if no further commits are needed.