tdf#168472 - Chart round-trip MSO -> LO -> MSO broken

Chart style import/export was not handling a:ST_FontCollectionIndex
correctly. Despite the name, its value is not an integer index,
but one of three strings (major, minor, none). Separate the
FontReference and StyleReference code better in order to handle
this OOXML value correctly.

Change-Id: I1638f6484ecfe5a9bd8c1adab8d854cff47ce14f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191195
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 5effa8d0977ac9ce13a8e66cbd2302e585c41c6d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195858
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>